🩹 Fix: news slider design was broken on mobile

--- a/assets/stylesheets/news_slider.scss
+++ b/assets/stylesheets/news_slider.scss
@@ -88,6 +88,10 @@ li {
 		object-fit: contain;
 		width: 100%;
 		transition: 0.4s ease-out;
+
+		@media screen and (max-width: 750px) {
+			height: calc(28vw + 90px);
+		}
 	}
 
 	a:hover img {
